--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,6 +11,8 @@ book:
     - 02-r-squared\r-squared.qmd
     - 03-bayes-theorem\bayes-theorem.qmd
     - 04-classification-metrics\classification-metrics.qmd
+    - 06-logistic-regression\logistic-regression.qmd
+    - 07-decision-trees\decision-trees.qmd
 
 format:
   html:
