--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,7 +13,7 @@ book:
     - 04-classification-metrics\classification-metrics.qmd
     - 06-logistic-regression\logistic-regression.qmd
     - 07-decision-trees\decision-trees.qmd
-
+    - 09-k-means\k-means.qmd
 format:
   html:
     theme: cosmo
