--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,6 +14,7 @@ book:
     - 04-classification-metrics\classification-metrics.qmd
     - 06-logistic-regression\logistic-regression.qmd
     - 07-decision-trees\decision-trees.qmd
+    - 08-random-forest\random-forest.qmd
     - 09-k-means\k-means.qmd
 format:
   html:
